# Job-Coach-Advocate

./: .replit  main.py  pyproject.toml
attached_assets/: Pasted--Full-High-Level-Plan-AI-Powered-Job-Profile-Generator-for-Job-Coaches-Python-Only-This-p-1742410126406.txt  Pasted-index-DmrHunjf-js-41-Unrecognized-feature-ambient-light-sensor-je-index-DmrHunjf-js-41-bp-in-1742414060033.txt
